# filerenamer

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
lib/: alphanum.hpp
src/: CMakeLists.txt  main.cpp
